footer - complete rewrite, fix misalignment, remove condition css

--- a/src/assets/scss/template/_newsletter-1.scss
+++ b/src/assets/scss/template/_newsletter-1.scss
@@ -83,6 +83,11 @@
   }
 }
 
+.footer {
+  @media screen and (max-width: $global-breakpoint) {
+    background-color: $primary;
+  }
+}
 .footer-link:hover {
   cursor: pointer;
 }
